# river

./: .gitignore  river.cabal
doc/: conditional.md  liveness.md
main/: riverc.hs
src/: Main.hs
src/River/: Bifunctor.hs  Compile.hs  Effect.hs  Fresh.hs  Map.hs  Name.hs  Progress.hs
src/River/Bifunctor/: Trans.hs
src/River/Core/: Allocate.hs  Annotation.hs  Color.hs  Evaluate.hs  Evaluator.hs  Example.hs  Fresh.hs  Pretty.hs  Primitive.hs  Rename.hs  Scope.hs  Syntax.hs
src/River/Core/Analysis/: Bindings.hs  Free.hs  Interference.hs  Live.hs  Scope.hs  Simplicial.hs
src/River/Core/Transform/: Coalesce.hs  Copy.hs  Dead.hs  Else.hs  Grail.hs  Jump.hs  Redundant.hs  Rename.hs  Split.hs
src/River/Source/: Annotation.hs  Check.hs  Elaborate.hs  Parser.hs  Pretty.hs  Reannotate.hs  Scope.hs  Syntax.hs  ToCore.hs
src/River/Source/Analysis/: Defined.hs  Live.hs  Return.hs  Scope.hs
src/River/Source/Concrete/: Annotation.hs  Parser.hs  Syntax.hs
src/River/X64/: Assimilate.hs  Color.hs  Data.hs  FromCore.hs  Name.hs  Pretty.hs  Primitive.hs  Register.hs  Syntax.hs
src/River/X64/Transform/: Flip.hs  Recondition.hs  Reprim.hs
test/: test.hs
test/River/Test/: Arbitraries.hs  Parser.hs
test/Test/River/: Arbitrary.hs  Evaluation.hs  Parser.hs
test/cases/lab1/: alpaca.l1  badger.l1  liveness.l1
test/lab1/: aluminium-return05.l1  catfish.l1  dragonfly.l1  elk.l1  exception01.l1  exception02.l1  goat.l1  horse.l1  liveness.l1  whiteboard.l1
test/lab2/: albatross.l2  bird.l2  cow.c  dog.c  eagle.l2  falcon.l2  greyhound.l2  lambda-drop.l2
tests/lab1/: alpaca.l1
