name:                river
version:             0.1.0.0
synopsis:            CMU 15-411 Labs
description:         CMU 15-411 Labs
homepage:            https://github.com/jystic/river
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
copyright:           (c) 2015 Jacob Stanley
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    River.Source.Parser
    River.Source.Pretty
    River.Source.Syntax

  build-depends:
      base                 >= 4.7  && < 4.8
    , annotated-wl-pprint  >= 0.7  && < 0.8
    , ansi-terminal        >= 0.6  && < 0.7
    , ansi-wl-pprint       >= 0.6  && < 0.7
    , either               >= 4.4  && < 4.5
    , optparse-applicative >= 0.11 && < 0.12
    , parsers              >= 0.12 && < 0.13
    , text                 >= 1.2  && < 1.3
    , trifecta             >= 1.5  && < 1.6
    , unordered-containers >= 0.2  && < 0.3
    , utf8-string          >= 1.0  && < 1.1


executable riverc
  main-is: riverc.hs
  hs-source-dirs: main

  ghc-options: -Wall
  default-language: Haskell2010

  build-depends:
      river
    , base                >= 4.7  && < 4.8
    , annotated-wl-pprint >= 0.7  && < 0.8
    , ansi-terminal       >= 0.6  && < 0.7
    , either              >= 4.4  && < 4.5
    , parsers             >= 0.12 && < 0.13


test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test

  ghc-options: -Wall
  default-language: Haskell2010

  build-depends:
      river
    , base         >= 4.7 && < 4.8
    , QuickCheck   >= 2.8 && < 2.9
    , testing-feat >= 0.4 && < 0.5
    , text         >= 1.2 && < 1.3
