name:               river
version:            0.1.0.0
synopsis:           CMU 15-411 Labs
description:        CMU 15-411 Labs
homepage:           https://github.com/jystic/river
license:            BSD3
license-file:       LICENSE
author:             Jacob Stanley
maintainer:         jacob@stanley.io
copyright:          (c) 2015-2016 Jacob Stanley
category:           Compilers/Interpreters
build-type:         Simple
cabal-version:      >= 1.10


library
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  default-language:
                    Haskell2010

  build-depends:
                    base                            >= 4.8        && < 4.9
                  , annotated-wl-pprint             >= 0.7        && < 0.8
                  , ansi-terminal                   >= 0.6        && < 0.7
                  , ansi-wl-pprint                  >= 0.6        && < 0.7
                  , containers                      >= 0.5        && < 0.6
                  , deepseq                         >= 1.4        && < 1.5
                  , optparse-applicative            >= 0.12.1     && < 1.13
                  , parsers                         >= 0.12       && < 0.13
                  , text                            >= 1.2        && < 1.3
                  , transformers                    >= 0.4        && < 0.5
                  , trifecta                        >= 1.5        && < 1.6
                  , unordered-containers            >= 0.2        && < 0.3
                  , utf8-string                     >= 1.0        && < 1.1

  exposed-modules:
                    River.Core.Pretty
                    River.Core.Syntax

                    River.Fresh
                    River.Name

                    River.Source.Check
                    River.Source.Parser
                    River.Source.Pretty
                    River.Source.Scope
                    River.Source.Syntax
                    River.Source.ToCore

executable riverc
  ghc-options:
                    -Wall

  hs-source-dirs:
                    main

  main-is:
                    riverc.hs

  default-language:
                    Haskell2010

  build-depends:
                    river
                  , base
                  , annotated-wl-pprint             >= 0.7        && < 0.8
                  , ansi-terminal                   >= 0.6        && < 0.7
                  , containers                      >= 0.5        && < 0.6
                  , parsers                         >= 0.12       && < 0.13
                  , text                            >= 1.2        && < 1.3
                  , transformers                    >= 0.4        && < 0.5
                  , trifecta                        >= 1.5        && < 1.6


test-suite test
  type:
                    exitcode-stdio-1.0

  ghc-options:
                    -Wall

  main-is:
                    test.hs

  hs-source-dirs:
                    test

  default-language:
                    Haskell2010

  build-depends:
                    river
                  , base
                  , QuickCheck                      >= 2.8        && < 2.9
                  , testing-feat                    >= 0.4        && < 0.5
                  , text                            >= 1.2        && < 1.3
                  , unordered-containers            >= 0.2        && < 0.3
